--- a/index.html
+++ b/index.html
@@ -324,6 +324,7 @@
             <a href="#about">ABOUT</a>
             <a href="#contact">CONTACT</a>
             <a href="#warranty">WARRANTY</a>
+             <a href="Untitled-2.html" target="_blank">ORDER</a> <!-- New menu option -->
         </div>
         <div class="dark-mode-toggle">
             <label for="dark-mode-switch">Dark Mode</label>
