--- a/Untitled-2.html
+++ b/Untitled-2.html
@@ -219,28 +219,28 @@
                 name: "Organic Energy Bar", 
                 price: 2.99, 
                 stock: 5, 
-                image: "https://images.unsplash.com/photo-1517438322307-e67111335449?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&h=300&q=80" 
+                image: "Ebar.png" 
             },
             { 
                 id: 2, 
                 name: "Cold Brew Coffee", 
                 price: 3.49, 
                 stock: 3, 
-                image: "https://images.unsplash.com/photo-1535556129032-b5a034d53b73?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&h=300&q=80" 
+                image: "https://encrypted-tbn3.gstatic.com/shopping?q=tbn:ANd9GcS9vxq22UsI5-bVViqyNyjlXiwRAqImclnoW7Is_LW1P8zg5tiBmQblEK3SOwizvTN7chGedzVHdg-8HWOLAqrXbVeBGnTRCHHfnTGXhFvkF8IIyXAEPTn2" 
             },
             { 
                 id: 3, 
                 name: "Bottled Water", 
                 price: 1.49, 
                 stock: 0, 
-                image: "https://images.unsplash.com/photo-1567331711402-509c12c41959?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&h=300&q=80" 
+                image: "https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcQrckenMDPWRsFKKRRO2iqWdNtBu_XgbsYhcPwv09GXF33-7LtgehSWjFX_8fs8MfqEX5gu2YpCGZZvRN0-J42lxxlbOf055fnhTYH8CWfIEfXmyruRqw7NKg" 
             },
             { 
                 id: 4, 
                 name: "Healthy Snack Mix", 
                 price: 2.29, 
                 stock: 7, 
-                image: "https://images.unsplash.com/photo-1490645935967-10de6ba17061?ixlib=rb-1.2.1&auto=format&fit=crop&w=500&h=300&q=80" 
+                image: "https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcTwg9DXxhvT5Wj28HGERpAffeDA2n9wKJIMgwzVSHgt_zP4K0v3vl6PqgBGR3bT9vSC2cG7VlWj-D_xcXULyO0pwRcw4YSAD8AqvuiVRo0i8GgzF_QIQqCw" 
             },
             { 
                 id: 5, 
